#225 - Use “RSocket over WebSocket” for communication between platform and coordinators and workers